Create BasketProductBuilder class